--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,10 @@ EPC endeca-mdex 11.3.0:
   tags:
     - delegated
 
+# Commented AWS test due to issues with performance.
+# Fails with "ERROR: Job failed: execution took longer than 2h0m0s seconds"
 # Tests for AWS driver for MDEX 11.3.0
-AWS endeca-mdex 11.3.0:
+.AWS endeca-mdex 11.3.0:
   variables:
     EPC_REGION: AWS-EUCENTRAL
   stage: deployment test
