--- a/tasks/install-mdex.yml
+++ b/tasks/install-mdex.yml
@@ -81,7 +81,7 @@
         proto: "tcp"
         setype: "http_port_t"
         state: "present"
-      when: ansible_selinux.status == "enabled"
+      when: ansible_selinux.status == "enabled" and not ( ansible_selinux.mode == "disabled" )
 
     - name: "Chown {{ mdex_path }} to {{ endeca_user }}"
       file:
