check seport mod

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,9 @@ before_script:
 
 variables:
   GET_SOURCES_ATTEMPTS: "5"
-  ANSIBLE_INVENTORY: "/home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible/inventory/epc.py"
-  ANSIBLE_LIBRARY: "/home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible"
-  ANSIBLE_INVENTORY_PLUGINS: "/home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible/inventory/epc.py"
 
 # Tests for EPC driver for MDEX 11.3.0
-EPC endeca-mdex 11.3.0:
+.EPC endeca-mdex 11.3.0:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
@@ -36,7 +33,7 @@ AWS endeca-mdex 11.3.0:
     - delegated
 
 # Tests for Docker driver for MDEX 11.3.0
-Docker endeca-mdex 11.3.0:
+.Docker endeca-mdex 11.3.0:
   stage: deployment test
   script:
     - molecule test -s docker-11.3.0
@@ -44,7 +41,7 @@ Docker endeca-mdex 11.3.0:
     - docker
 
 # Tests for Docker driver for MDEX 6.5.2
-Docker endeca-mdex 6.5.2:
+.Docker endeca-mdex 6.5.2:
   stage: deployment test
   script:
     - molecule test -s docker-6.5.2
@@ -52,7 +49,7 @@ Docker endeca-mdex 6.5.2:
     - docker
 
 # Tests for Docker driver for MDEX 6.5.1
-Docker endeca-mdex 6.5.1:
+.Docker endeca-mdex 6.5.1:
   stage: deployment test
   script:
     - molecule test -s docker-6.5.1
@@ -60,7 +57,7 @@ Docker endeca-mdex 6.5.1:
     - docker
 
 # Tests for Docker driver for MDEX 6.4.1.2
-Docker endeca-mdex 6.4.1.2:
+.Docker endeca-mdex 6.4.1.2:
   stage: deployment test
   script:
     - molecule test -s docker-6.4.1.2
@@ -68,7 +65,7 @@ Docker endeca-mdex 6.4.1.2:
     - docker
 
 # Tests for Docker driver for MDEX 6.4.0
-Docker endeca-mdex 6.4.0:
+.Docker endeca-mdex 6.4.0:
   stage: deployment test
   script:
     - molecule test -s docker-6.4.0
