--- a/molecule/cloud-aws/molecule.yml
+++ b/molecule/cloud-aws/molecule.yml
@@ -1,6 +1,8 @@
 ---
 dependency:
   name: galaxy
+  options:
+    role-file: requirements.yml
 driver:
   name: delegated
 lint:
@@ -8,26 +10,33 @@ lint:
   options:
     config-file: molecule/yamllint.yml
 platforms:
-  - name: test-endeca-mdex
-    image: CentOS6_64-bit
+  - name: test-aws-centos7-ansible-role-endeca-mdex
+    image: CentOS6_64
     shape: micro
     region: AWS-EUCENTRAL
     wait_timeout: 1800
     groups:
-      - endeca_mdex_group
+      - rhel_family
 provisioner:
   name: ansible
+  # log: True
+  playbooks:
+    create: ../resources/provisioning/create.yml
+    prepare: ../resources/provisioning/prepare.yml
+    destroy: ../resources/provisioning/destroy.yml
   config_options:
     ssh_connection:
       control_path: "/var/ans/%%h"
-  env:
-    ANSIBLE_LIBRARY:
-      /home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible
   lint:
     name: ansible-lint
+  env:
+    ANSIBLE_LIBRARY: ${ANSIBLE_LIBRARY}
 scenario:
-  name: cloud-aws
+  name: cloud-aws-delegated
 verifier:
   name: testinfra
+  options:
+    verbose: true
+  directory: ../resources/tests/
   lint:
     name: flake8
