fix molecule scenario name

--- a/molecule/cloud-aws/molecule.yml
+++ b/molecule/cloud-aws/molecule.yml
@@ -32,7 +32,7 @@ provisioner:
   env:
     ANSIBLE_LIBRARY: ${ANSIBLE_LIBRARY}
 scenario:
-  name: cloud-aws-delegated
+  name: cloud-aws
 verifier:
   name: testinfra
   options:
