--- a/molecule/cloud-aws/molecule.yml
+++ b/molecule/cloud-aws/molecule.yml
@@ -11,7 +11,7 @@ lint:
     config-file: molecule/yamllint.yml
 platforms:
   - name: test-aws-centos6-ansible-role-endeca-mdex
-    image: CentOS6_64
+    image: CentOS6_64-bit
     shape: micro
     region: AWS-EUCENTRAL
     wait_timeout: 1800
@@ -19,7 +19,7 @@ platforms:
       - rhel_family
 provisioner:
   name: ansible
-  log: True
+  # log: True
   playbooks:
     create: ../resources/provisioning/create.yml
     prepare: ../resources/provisioning/prepare.yml
