--- a/molecule/cloud-epc/molecule.yml
+++ b/molecule/cloud-epc/molecule.yml
@@ -12,7 +12,7 @@ lint:
 platforms:
   - name: test-endeca-mdex-epc
     image: CentOS6_64-bit
-    shape: mini
+    shape: small
     region: EPAM-BY2
     wait_timeout: 1800
     groups:
