--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ AWS endeca-mdex 11.3.0:
     EPC_REGION: AWS-EUCENTRAL
   stage: deployment test
   script:
-    - molecule --debug test -s cloud-aws
+    - molecule test -s cloud-aws
   tags:
     - delegated
 
