--- a/tasks/install-mdex.yml
+++ b/tasks/install-mdex.yml
@@ -5,11 +5,15 @@
       package:
         name: "{{ requirements }}"
         state: "present"
+      register: installed_packages
+      until: installed_packages is succeeded
 
     - name: "Install ansible selinux configure libraries"
       package:
         name: "{{ selibs_item }}"
         state: present
+      register: installed_selinux_package
+      until: installed_selinux_package is succeeded
       loop:
         - policycoreutils-python
         - libsemanage-python
