--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,4 +19,4 @@
     - name: "Install MDEX {{ mdex_version }}"
       include_tasks: "install-mdex.yml"
 
-  when: mdex_dir.stat.exists == False
+  when: not mdex_dir.stat.exists|bool
