--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ variables:
   GET_SOURCES_ATTEMPTS: "5"
 
 # Tests for EPC driver for MDEX 11.3.0
-.EPC endeca-mdex 11.3.0:
+EPC endeca-mdex 11.3.0:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
@@ -34,7 +34,7 @@ AWS endeca-mdex 11.3.0:
     - delegated
 
 # Tests for Docker driver for MDEX 11.3.0
-.Docker endeca-mdex 11.3.0:
+Docker endeca-mdex 11.3.0:
   stage: deployment test
   script:
     - molecule test -s docker-11.3.0
@@ -42,7 +42,7 @@ AWS endeca-mdex 11.3.0:
     - docker
 
 # Tests for Docker driver for MDEX 6.5.2
-.Docker endeca-mdex 6.5.2:
+Docker endeca-mdex 6.5.2:
   stage: deployment test
   script:
     - molecule test -s docker-6.5.2
@@ -50,7 +50,7 @@ AWS endeca-mdex 11.3.0:
     - docker
 
 # Tests for Docker driver for MDEX 6.5.1
-.Docker endeca-mdex 6.5.1:
+Docker endeca-mdex 6.5.1:
   stage: deployment test
   script:
     - molecule test -s docker-6.5.1
@@ -58,7 +58,7 @@ AWS endeca-mdex 11.3.0:
     - docker
 
 # Tests for Docker driver for MDEX 6.4.1.2
-.Docker endeca-mdex 6.4.1.2:
+Docker endeca-mdex 6.4.1.2:
   stage: deployment test
   script:
     - molecule test -s docker-6.4.1.2
@@ -66,7 +66,7 @@ AWS endeca-mdex 11.3.0:
     - docker
 
 # Tests for Docker driver for MDEX 6.4.0
-.Docker endeca-mdex 6.4.0:
+Docker endeca-mdex 6.4.0:
   stage: deployment test
   script:
     - molecule test -s docker-6.4.0
