--- a/molecule/cloud-aws-delegated/molecule.yml
+++ b/molecule/cloud-aws-delegated/molecule.yml
@@ -8,7 +8,7 @@ driver:
 lint:
   name: yamllint
   options:
-    config-file: molecule/yamllint.yml
+    config-file: .yamllint
 platforms:
   - name: test-aws-centos6-ansible-role-endeca-mdex
     image: CentOS6_64-bit
@@ -32,7 +32,7 @@ provisioner:
   env:
     ANSIBLE_LIBRARY: ${ANSIBLE_LIBRARY}
 scenario:
-  name: cloud-aws
+  name: cloud-aws-delegated
 verifier:
   name: testinfra
   options:
