--- a/molecule/docker-6.5.1/molecule.yml
+++ b/molecule/docker-6.5.1/molecule.yml
@@ -6,7 +6,7 @@ driver:
 lint:
   name: yamllint
   options:
-    config-file: molecule/yamllint.yml
+    config-file: .yamllint
 platforms:
   - name: test-endeca-mdex-6.5.1
     image: centos:6
@@ -17,9 +17,6 @@ provisioner:
   config_options:
     ssh_connection:
       control_path: "/var/ans/%%h"
-  env:
-    ANSIBLE_LIBRARY:
-      /home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible
   lint:
     name: ansible-lint
 scenario:
