--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ Docker endeca-mdex 11.3.0:
     - docker
 
 # Tests for Docker driver for MDEX 6.5.2
-Docker endeca-mdex 6.5.2:
+.Docker endeca-mdex 6.5.2:
   stage: deployment test
   script:
     - molecule test -s docker-6.5.2
@@ -50,7 +50,7 @@ Docker endeca-mdex 6.5.2:
     - docker
 
 # Tests for Docker driver for MDEX 6.5.1
-Docker endeca-mdex 6.5.1:
+.Docker endeca-mdex 6.5.1:
   stage: deployment test
   script:
     - molecule test -s docker-6.5.1
@@ -58,7 +58,7 @@ Docker endeca-mdex 6.5.1:
     - docker
 
 # Tests for Docker driver for MDEX 6.4.1.2
-Docker endeca-mdex 6.4.1.2:
+.Docker endeca-mdex 6.4.1.2:
   stage: deployment test
   script:
     - molecule test -s docker-6.4.1.2
@@ -66,7 +66,7 @@ Docker endeca-mdex 6.4.1.2:
     - docker
 
 # Tests for Docker driver for MDEX 6.4.0
-Docker endeca-mdex 6.4.0:
+.Docker endeca-mdex 6.4.0:
   stage: deployment test
   script:
     - molecule test -s docker-6.4.0
