--- a/molecule/docker-11.3.0/molecule.yml
+++ b/molecule/docker-11.3.0/molecule.yml
@@ -11,7 +11,7 @@ platforms:
   - name: test-endeca-mdex-11.3.0
     image: centos:6
     groups:
-      - endeca-mdex
+      - endeca_mdex_11.3.0
 provisioner:
   name: ansible
   config_options:
