--- a/molecule/docker-6.4.x/playbook.yml
+++ b/molecule/docker-6.4.x/playbook.yml
@@ -1,17 +1,12 @@
 ---
 - name: Converge 6.4.0
-  hosts: endeca_mdex_6.4.0
+  hosts: endeca_mdex
   roles:
     - role: ansible-role-endeca-mdex
       transport: "web"
       mdex_version: "6.4.0"
       transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-commerce-suite/commerce/endeca10.1/V35742-01.zip"
-
-- name: Converge 6.4.1.2
-  hosts: endeca_mdex_6.4.1.2
-  roles:
     - role: ansible-role-endeca-mdex
       transport: "web"
       mdex_version: "6.4.1.2"
       transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-commerce-suite/commerce/endeca10.2/V40319-01.zip"
-
