--- a/molecule/docker-6.5.x/molecule.yml
+++ b/molecule/docker-6.5.x/molecule.yml
@@ -11,11 +11,11 @@ platforms:
   - name: test-endeca-mdex-6.5.1
     image: centos:6
     groups:
-      - endeca_mdex_6.5.1
+      - endeca_mdex
   - name: test-endeca-mdex-6.5.2
     image: centos:6
     groups:
-      - endeca_mdex_6.5.2
+      - endeca_mdex
 provisioner:
   name: ansible
   config_options:
