--- a/molecule/docker-6.5.x/playbook.yml
+++ b/molecule/docker-6.5.x/playbook.yml
@@ -1,15 +1,11 @@
 ---
-- name: Converge 6.5.1
-  hosts: endeca_mdex_6.5.1
+- name: Converge 6.5.x
+  hosts: endeca_mdex
   roles:
     - role: ansible-role-endeca-mdex
       transport: "web"
       mdex_version: "6.5.1"
       transport_web: "{{ lookup('env','STORAGE_EPC') }}/oracle-commerce-suite/commerce/endeca11.1/V46002-01.zip"
-
-- name: Converge 6.5.2
-  hosts: endeca_mdex_6.5.2
-  roles:
     - role: ansible-role-endeca-mdex
       transport: "web"
       mdex_version: "6.5.2"
