Selinux check port (#4)
* add enabling port in selinux

* fix molecule test

* fix molecule scenario name

* fix image name

* change shape due to OOM

* refactoring

* lint fix

* fix travis

* fix gitlab tests

* adjust molecule tests

* disable docker centos6 tests

* fix readme

* refactoring tests

* fix for parallel run

* disable tests for mdex 6.x

* disable aws cento6 tests

* fixed typo for version

--- a/molecule/docker-6.4.x/molecule.yml
+++ b/molecule/docker-6.4.x/molecule.yml
@@ -6,24 +6,25 @@ driver:
 lint:
   name: yamllint
   options:
-    config-file: molecule/yamllint.yml
+    config-file: .yamllint
 platforms:
-  - name: test-endeca-mdex-6.5.1
+  - name: test-endeca-mdex-6.4.0
     image: centos:6
     groups:
-      - endeca-mdex
+      - endeca_mdex
+  - name: test-endeca-mdex-6.4.1.2
+    image: centos:6
+    groups:
+      - endeca_mdex
 provisioner:
   name: ansible
   config_options:
     ssh_connection:
       control_path: "/var/ans/%%h"
-  env:
-    ANSIBLE_LIBRARY:
-      /home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible
   lint:
     name: ansible-lint
 scenario:
-  name: docker-6.5.1
+  name: docker-6.4.x
 verifier:
   name: testinfra
   lint:
