--- a/molecule/docker-11.3.0/molecule.yml
+++ b/molecule/docker-11.3.0/molecule.yml
@@ -6,20 +6,17 @@ driver:
 lint:
   name: yamllint
   options:
-    config-file: molecule/yamllint.yml
+    config-file: .yamllint
 platforms:
   - name: test-endeca-mdex-11.3.0
     image: centos:6
     groups:
-      - endeca-mdex
+      - endeca_mdex
 provisioner:
   name: ansible
   config_options:
     ssh_connection:
       control_path: "/var/ans/%%h"
-  env:
-    ANSIBLE_LIBRARY:
-      /home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible
   lint:
     name: ansible-lint
 scenario:
