--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,12 +8,10 @@ stages:
 before_script:
   - ansible --version
   - molecule --version
+  - ansible-config dump --only-changed
 
 variables:
   GET_SOURCES_ATTEMPTS: "5"
-  ANSIBLE_INVENTORY: "/home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible/inventory/epc.py"
-  ANSIBLE_LIBRARY: "/home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible"
-  ANSIBLE_INVENTORY_PLUGINS: "/home/gitlab-runner/.local/lib/python2.7/site-packages/epam_ansible/inventory/epc.py"
 
 # Tests for EPC driver for MDEX 11.3.0
 EPC endeca-mdex 11.3.0:
@@ -21,17 +19,17 @@ EPC endeca-mdex 11.3.0:
     EPC_REGION: EPAM-BY2
   stage: deployment test
   script:
-    - molecule test -s cloud-epc
+    - molecule test -s cloud-epc-delegated
   tags:
     - delegated
 
 # Tests for AWS driver for MDEX 11.3.0
-AWS endeca-mdex 11.3.0:
+.AWS endeca-mdex 11.3.0:
   variables:
     EPC_REGION: AWS-EUCENTRAL
   stage: deployment test
   script:
-    - molecule test -s cloud-aws
+    - molecule test -s cloud-aws-delegated
   tags:
     - delegated
 
@@ -43,34 +41,18 @@ Docker endeca-mdex 11.3.0:
   tags:
     - docker
 
-# Tests for Docker driver for MDEX 6.5.2
-Docker endeca-mdex 6.5.2:
+# Tests for Docker driver for MDEX 6.5.x
+Docker endeca-mdex 6.5.x:
   stage: deployment test
   script:
-    - molecule test -s docker-6.5.2
+    - molecule test -s docker-6.5.x
   tags:
     - docker
 
-# Tests for Docker driver for MDEX 6.5.1
-Docker endeca-mdex 6.5.1:
+# Tests for Docker driver for MDEX 6.4.x
+Docker endeca-mdex 6.4.x:
   stage: deployment test
   script:
-    - molecule test -s docker-6.5.1
-  tags:
-    - docker
-
-# Tests for Docker driver for MDEX 6.4.1.2
-Docker endeca-mdex 6.4.1.2:
-  stage: deployment test
-  script:
-    - molecule test -s docker-6.4.1.2
-  tags:
-    - docker
-
-# Tests for Docker driver for MDEX 6.4.0
-Docker endeca-mdex 6.4.0:
-  stage: deployment test
-  script:
-    - molecule test -s docker-6.4.0
+    - molecule test -s docker-6.4.x
   tags:
     - docker
